--- a/DiveCompMVC/Views/Shared/_Layout.cshtml
+++ b/DiveCompMVC/Views/Shared/_Layout.cshtml
@@ -24,11 +24,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="FinaDifficulty" asp-action="FinaDifficulty">Difficulties</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contest" asp-action="NewContest">New Contest</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Diver" asp-action="Index">Add Diver</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="LoadContest" asp-action="LoadContest">Load Contests</a>
                         </li>
                     </ul>
                 </div>
