--- a/DiveCompMVC/Views/Shared/_Layout.cshtml
+++ b/DiveCompMVC/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Diver" asp-action="Index">Add Diver</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Results" asp-action="Index">Results</a>
+                        </li>
                     </ul>
                 </div>
             </div>
