--- a/DiveCompMVC/Views/Contest/InputView.cshtml
+++ b/DiveCompMVC/Views/Contest/InputView.cshtml
@@ -42,7 +42,7 @@
         </form>
     </div>
 </div>
-<h3>Add Judge To Contest</h3>
+<h3>Add Event To Contest</h3>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="AddEvent" asp-controller="Event">
@@ -56,7 +56,7 @@
             
             <div class="row" hidden>
                 @Html.HiddenFor(model => model.Events.ContestId)
-                <input type="hidden" id="cName"  value=@Model.Contests.Id />
+                <input asp-for="Events.ContestId" type="hidden" id="cName"  value=@Model.Contests.Id />
             </div>
 
             @ViewBag.Message
