--- a/DiveCompMVC/Views/EventType/AddEventType.cshtml
+++ b/DiveCompMVC/Views/EventType/AddEventType.cshtml
@@ -12,15 +12,21 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Height" class="control-label"></label>
-                <input asp-for="Height" class="form-control" />
+                <select asp-for="Height" class="form-control">
+
+                    <option>Select Height</option>
+                    <option value="1">1m</option>
+                    <option value="3">3m</option>
+                    <option value="5">5m</option>
+                    <option value="7.5">7.5m</option>
+                    <option value="10">10m</option>
+                </select>
                 <span asp-validation-for="Height" class="text-danger"></span>
             </div>
-            
-            @ViewBag.Message
-            <div class="form-group">
-                <input type="submit" value="Add" class="btn btn-primary" />
-            </div>
+                @ViewBag.Message
+                <div class="form-group">
+                    <input type="submit" value="Add" class="btn btn-primary" />
+                </div>
         </form>
     </div>
 </div>
