--- a/DiveCompMVC/Views/Contest/NewContest.cshtml
+++ b/DiveCompMVC/Views/Contest/NewContest.cshtml
@@ -1,15 +1,28 @@
-﻿@{
+﻿@model DiveCompMVC.Models.ViewModel 
+@{
     Layout = "_Layout";
 }
 
+
+
 <body>
+
     <button class="btn-outline-dark" type="button">
         <a class="btn-link" asp-area="" asp-controller="Contest" asp-action="AddContest">Add New Contest</a>
     </button>
     <button class="btn-outline-dark" type="button">
         <a class="btn-link" asp-area="" asp-controller="Diver" asp-action="AddDiver">Add New Diver</a>
     </button>
-    <button class="btn-outline-dark" type="button">
-        <a class="btn-link" asp-area="" asp-controller="EventType" asp-action="AddEventType">Add New EventType</a>
-    </button>
+    <div class="form-control">
+       <select class="form-control">
+           @foreach (var item in Model.AllEventTypes) {
+                <option value="@item.Id">
+                    @item.Gender @item.Type @item.Height m
+                </option>
+            }
+       </select>
+        <button class="btn-outline-dark" type="button">
+            <a class="btn-link" asp-area="" asp-controller="EventType" asp-action="AddEventType">Add New EventType</a>
+        </button>
+    </div>
 </body>
