--- a/DiveCompMVC/Views/EventType/AddEventType.cshtml
+++ b/DiveCompMVC/Views/EventType/AddEventType.cshtml
@@ -7,9 +7,24 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <select asp-for="Gender" class="form-control">
+
+                    <option value=1>Select Gender</option>
+                    <option value="Mens">Men</option>
+                    <option value="Womens">Women</option>
+
+                </select>
+                <span asp-validation-for="Gender" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <select asp-for="Type" class="form-control">
+
+                    <option value=0>Select Type</option>
+                    <option value="Springboard">Springboard</option>
+                    <option value="Platform">Platform</option>
+
+                </select>
+                <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <select asp-for="Height" class="form-control">
@@ -23,10 +38,13 @@
                 </select>
                 <span asp-validation-for="Height" class="text-danger"></span>
             </div>
-                @ViewBag.Message
-                <div class="form-group">
-                    <input type="submit" value="Add" class="btn btn-primary" />
-                </div>
+            @ViewBag.Message
+            <div class="form-group">
+                <input type="submit" value="Add" class="btn btn-primary" />
+            </div>
         </form>
+        <button  type="button">
+            <a class="btn-link" asp-area="" asp-controller="Contest" asp-action="NewContest">Back</a>
+        </button>
     </div>
 </div>
