--- a/DiveCompMVC/Views/Contest/LoadContest.cshtml
+++ b/DiveCompMVC/Views/Contest/LoadContest.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayFor(modelItem => item.Club)
             </td>
             <td>
-                @Html.ActionLink("Open", "OpenContest", new {  id=item.Id  })
+                @Html.ActionLink("Open", "OpenEvents", new {  id=item.Id  })
             </td>
         </tr>
 }
