--- a/DiveCompMVC/Views/Home/Index.cshtml
+++ b/DiveCompMVC/Views/Home/Index.cshtml
@@ -8,9 +8,9 @@
     <div class="centered">
         <img src="~/tomDiveBild.jpg" />
         <br /> <br /> <br />
-        <button class="btn-outline-dark" type="button">
-            <a class="btn-link" asp-area="" asp-controller="Contest" asp-action="NewContest">Create New Contest</a>
-        </button>
+                      <button class="btn-outline-dark" name="create" type="button">
+                          <a class="btn-outline-dark" asp-area="" asp-controller="Contest" asp-action="NewContest">Create New Contest</a>
+                      </button>        
     </div>
 
 </div>
@@ -19,9 +19,9 @@
     <div class="centered">
         <img src="~/FylldDiveBild.jpg" />
         <br /> <br /> <br />
-        <button class="btn-outline-dark" type="button">
-            <a class="btn-link" asp-area="" asp-controller="Contest" asp-action="LoadContest">Load Existing Contest</a>
-        </button>
+                      <button class="btn-outline-dark" name="load" type="button">
+                          <a class="btn-outline-dark" asp-area="" asp-controller="Contest" asp-action="LoadContest">Load Existing Contest</a>
+                      </button>
     </div>
 
 </div>
