--- a/DiveCompMVC/Views/Contest/OpenEvents.cshtml
+++ b/DiveCompMVC/Views/Contest/OpenEvents.cshtml
@@ -11,7 +11,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.Type.Name) @Html.DisplayNameFor(model => model.Type.Height)
             </th>
             <th></th>
         </tr>
@@ -21,7 +21,7 @@
         <tr>
 
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.Type.Name) @Html.DisplayFor(modelItem => item.Type.Height)
             </td>
             <td>
                 @Html.ActionLink("Leaderboard", "Leaderboard", new {  id=item.Id })
