--- a/DiveCompMVC/Views/Contest/AddContest.cshtml
+++ b/DiveCompMVC/Views/Contest/AddContest.cshtml
@@ -1,26 +1,34 @@
 ﻿@model DiveComp.Data.Models.ContestModel
 
-<h4>Create a new contest!</h4>
+@{
+    ViewData["Title"] = "Create a new contest";
+}
+
+<h1>Create</h1>
+
+<h4>Contest</h4>
+<hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddContest" asp-controller="Contest">
+        <form asp-action="AddContest">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" placeholder="" />
+                <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Club" class="control-label"></label>
                 <input asp-for="Club" class="form-control" />
                 <span asp-validation-for="Club" class="text-danger"></span>
-            </div>
-
-            @ViewBag.Message
+   
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="AddContest" class="btn btn-primary" />
             </div>
         </form>
     </div>
+</div>
+
+<div>
+    <a asp-action="Index">Back to List</a>
 </div>
