--- a/DiveCompMVC/Views/Contest/AddJudge.cshtml
+++ b/DiveCompMVC/Views/Contest/AddJudge.cshtml
@@ -4,20 +4,34 @@
     ViewData["Title"] = "Add Judge";
 }
 
-<h1>Confirm adding diver</h1>
+<h1>Select which judge to add to @Model.AllContests[0].Name</h1>
 
-<div>
-    <h4>Judge</h4>
-    <hr />
-    <dl class="row">
-        <dd class="col-sm-2">
-            @Html.DisplayFor(model => model.AllJudges[0].FirstName)
-        </dd>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AllJudges[0].LastName)
-        </dd>
-    </dl>
-</div>
-<div>
-    @Html.ActionLink("Confirm adding judge", "AddJudgesToContest", "Contest", new { diverId = Model.AllJudges[0].Id, contestId = Model.AllContests[0].Id }, null)
-</div>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                First Name
+            </th>
+            <th>
+                Last Name
+            </th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.AllJudges)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.ActionLink("Add judge", "AddJudgesToContest", "Contest", new { judgeId = @item.Id, contestId = Model.AllContests[0].Id }, null)
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
