--- a/DiveCompMVC/Views/Contest/CreateContest.cshtml
+++ b/DiveCompMVC/Views/Contest/CreateContest.cshtml
@@ -59,3 +59,8 @@
 <div>
     <a asp-controller="Home" asp-action="Index">Back to home</a>
 </div>
+
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
