--- a/DiveCompMVC/Views/Contest/AddJudgesToContest.cshtml
+++ b/DiveCompMVC/Views/Contest/AddJudgesToContest.cshtml
@@ -1,10 +1,10 @@
 ﻿@model DiveCompMVC.Models.ViewModel
 
 @{
-    ViewData["Title"] = "Add judges test";
+    ViewData["Title"] = "Add judges";
 }
 
-@Html.ActionLink("Continue", "StartContest", "Contest", new { contestId = Model.AllContests[0].Id }, null)
+@Html.ActionLink("Continue", "StartContest", "CurrentEvent", new { id = Model.AllContests[0].Id }, null)
 
 <h1>Add Judges to @Html.DisplayFor(modelItem => Model.AllContests[0].Name)</h1>
 
