--- a/DiveCompMVC/Views/Contest/AddDiver.cshtml
+++ b/DiveCompMVC/Views/Contest/AddDiver.cshtml
@@ -24,20 +24,22 @@
     <tbody>
         @foreach (var item in Model.AllDivers)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.FirstName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.LastName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Club)
-                </td>
-                <td>
-                    @Html.ActionLink("Add diver", "AddDiversToContest", "Contest", new { diverId = @item.Id, contestId = Model.AllContests[0].Id }, null)
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.FirstName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LastName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Club)
+            </td>
+            <td>
+                @Html.ActionLink("Add diver", "AddDiverConfirmed", "Contest", new { diverId = @item.Id, contestId = Model.AllContests[0].Id }, null)
+            </td>
+        </tr>
         }
     </tbody>
 </table>
+
+@Html.ActionLink("Return to Added Divers", "AddDiversToContest", "Contest", new { contestId = Model.AllContests[0].Id }, null)
