Date, city, final screen

--- a/DiveCompMVC/Views/Contest/CreateContest.cshtml
+++ b/DiveCompMVC/Views/Contest/CreateContest.cshtml
@@ -18,6 +18,11 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="City" class="control-label"></label>
+                <input asp-for="City" class="form-control" />
+                <span asp-validation-for="City" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <select asp-for="Nr_Jumps" class="form-control">
 
                     <option>Select number of jumps in the event</option>
