--- a/DiveCompMVC/Views/CurrentEvent/FinalScreen.cshtml
+++ b/DiveCompMVC/Views/CurrentEvent/FinalScreen.cshtml
@@ -3,11 +3,11 @@
 
 
 <table class="table table-striped">
-    <h5>Leaderboard</h5>
+    <h5>Final Result</h5>
     <thead>
         <tr>
             <th>
-                Rank
+                Final Position
             </th>
             <th>
                 Name
@@ -16,26 +16,21 @@
                 Club
             </th>
             <th>
-                Score
+                Total Score
             </th>
-            <th>
-                Dives performed
-            </th>
-            <th>
 
-            </th>
+
         </tr>
     </thead>
     <tbody>
         @{var i = 0; }
-        @foreach (var item in Model.leaderboard)
-        {
+        @foreach (var item in Model.leaderboard) {
             i++;
             <tr>
                 <td>
                     @i
                 </td>
-                <td>
+                <td id="@i">
                     @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
                 </td>
                 <td>
@@ -44,16 +39,39 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Score)
                 </td>
+
+
+            </tr>
+        }
+    </tbody>
+</table>
+<table class="table-striped">
+    <h5>Judges for Contest</h5>
+    <thead>
+        <tr>
+            <th>
+                Name
+            </th>
+            <th>
+                Org
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model.judges) {
+            <tr>
                 <td>
-                    @Html.DisplayFor(modelitem => item.hasJumped)
+                    @item.FirstName @item.LastName
                 </td>
                 <td>
-                    @Html.ActionLink("Register Score", "PerformJump", new { diverid = item.Id, contestid = Model.contest.Id })
+                    @item.Org
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
 <div>
-    @Html.ActionLink("Summary", "FinalScreen", new { id = Model.contest.Id })
+    @Html.ActionLink("End Contest", "Index", "Home")
+    @Html.ActionLink("Back", "StartContest", new { id = @Model.contest.Id })
 </div> 
