--- a/DiveCompMVC/Views/Home/Index.cshtml
+++ b/DiveCompMVC/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
         <img src="~/FylldDiveBild.jpg" />
         <br /> <br /> <br />
                       <button class="btn-outline-dark" name="load" type="button">
-                          <a class="btn-outline-dark" asp-area="" asp-controller="Contest" asp-action="LoadContest">Load Existing Contest</a>
+                          <a class="btn-outline-dark" asp-area="" asp-controller="LoadContest" asp-action="Index">Load Existing Contest</a>
                       </button>
     </div>
 
