--- a/DiveCompMVC/Views/Shared/_Layout.cshtml
+++ b/DiveCompMVC/Views/Shared/_Layout.cshtml
@@ -24,9 +24,14 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
-
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Contest" asp-action="NewContest">New Contest</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Diver" asp-action="Index">Divers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Judge" asp-action="Index">Judges</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Contest" asp-action="CreateContest">New Contest</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="LoadContest" asp-action="LoadContest">Load Contests</a>
