--- a/DiveCompMVC/Views/Judge/Create.cshtml
+++ b/DiveCompMVC/Views/Judge/Create.cshtml
@@ -1,9 +1,9 @@
-﻿@model DiveComp.Data.Models.DiverModel
+﻿@model DiveComp.Data.Models.JudgeModel
 
-<h3> Add Diver to Contest </h3>
+<h3> Add Judge </h3>
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="AddDiver" asp-controller="Diver">
+        <form asp-action="Create" asp-controller="Judge">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="form-group">
@@ -17,14 +17,9 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Club" class="control-label"></label>
-                <input asp-for="Club" class="form-control" />
-                <span asp-validation-for="Club" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Country" class="control-label"></label>
-                <input asp-for="Country" class="form-control" />
-                <span asp-validation-for="Country" class="text-danger"></span>
+                <label asp-for="Org" class="control-label"></label>
+                <input asp-for="Org" class="form-control" />
+                <span asp-validation-for="Org" class="text-danger"></span>
             </div>
             @ViewBag.Message
             <div class="form-group">
