--- a/DiveCompMVC/Views/LoadContest/SelectedContest.cshtml
+++ b/DiveCompMVC/Views/LoadContest/SelectedContest.cshtml
@@ -31,6 +31,8 @@
 
     <div class="thead-dark">
         <h4>@Model.contest.Name @Model.contest.Type.Gender @Model.contest.Type.Type @Model.contest.Type.Height m</h4>
+        <br />
+        <h4>@Model.contest.City @Model.contest.Date.ToShortDateString()</h4>
         <hr />
     </div>
     <div class="all-tables">
