--- a/DiveCompMVC/Views/CurrentEvent/Overview.cshtml
+++ b/DiveCompMVC/Views/CurrentEvent/Overview.cshtml
@@ -1,19 +1,45 @@
 ﻿@model DiveCompMVC.Models.ActiveContestVM
 
 
-<h1>Overview</h1>
+    <head>
+        <style>
+            .all-tables {
+                margin: 0;
+                padding: 5px;
+                background-color: whitesmoke;
+            }
 
-<body>
+                .all-tables > h1, .FixedSizedTable {
+                    margin: 15px;
+                    padding: 15px;
+                }
 
-    <div class="thead-dark">
-        <h4>@Model.contest.Name @Model.contest.Type.Gender @Model.contest.Type.Type @Model.contest.Type.Height m</h4>
-        <hr />
-    </div>
+            .FixedSizedTable {
+                padding: 2px;
+                background: white;
+                margin-left: auto;
+                margin-right: auto;
+            }
 
-    <div class="split left">
-        <div class="centered">
+                .FixedSizedTable > h2, p {
+                    margin: 8px;
+                    font-size: 90%;
+                }
+        </style>
+    </head>
+
+    <h1>Overview</h1>
+
+    <div class="all-tables">
+
+        <div class="thead-dark">
+            <h4>@Model.contest.Name @Model.contest.Type.Gender @Model.contest.Type.Type @Model.contest.Type.Height m</h4>
+            <br />
+            <h5>@Model.contest.City  @Model.contest.Date.ToShortDateString() </h5>
+            <hr />
+        </div>
             <h5>Judges</h5>
-            <table class="table-striped">
+            <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>
@@ -38,13 +64,9 @@
                     }
                 </tbody>
             </table>
-        </div>
-    </div>
 
-    <div class="split right">
-        <div class="centered">
             <h5>Divers</h5>
-            <table class="table-striped">
+            <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>
@@ -75,18 +97,16 @@
                     }
                 </tbody>
             </table>
-  
+
             <div class="btn">
                 <button class="btn-outline-dark" name="start" type="button">
-                   
+
                     @Html.ActionLink("Start", "StartContest", "CurrentEvent", new { id = @Model.contest.Id }, null)
 
                 </button>
             </div>
-        </div>
+
+
+
+
     </div>
-
-    
-
-
-</body>
