--- a/DiveCompMVC/Views/LoadContest/Index.cshtml
+++ b/DiveCompMVC/Views/LoadContest/Index.cshtml
@@ -1,48 +1,81 @@
 ﻿@model IEnumerable<DiveComp.Data.Models.ContestModel>
 
 
-<div class="col-md-10">
-    <table class="table-striped">
-        <thead>
-            <tr>
-                <th>
-                    Name
-                </th>
-                <th>
-                    Type
-                </th>
-                <th>
-                    Nr. of Jumps
-                </th>
-                <th>
-                    Date
-                </th>
-                <th>
-
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @item.Name
-                    </td>
-                    <td>
-                        @item.Type.Gender @item.Type.Type @item.Type.Height m
-                    </td>
-                    <td>
-                        @item.Nr_Jumps
-                    </td>
-                    <td>
-                        @item.Date.ToShortDateString()
-                    </td>
-                    <td>
-                        @Html.ActionLink(">>", "SelectedContest", new { id = item.Id })
-                    </td>
-                </tr>
+    <head>
+        <style>
+            .all-tables {
+                margin: 0;
+                padding: 5px;
+                background-color: whitesmoke;
             }
-        </tbody>
-    </table>
-</div>
+
+                .all-tables > h1, .FixedSizedTable {
+                    margin: 15px;
+                    padding: 15px;
+                }
+
+            .FixedSizedTable {
+                padding: 2px;
+                background: white;
+                margin-left: auto;
+                margin-right: auto;
+            }
+
+                .FixedSizedTable > h2, p {
+                    margin: 8px;
+                    font-size: 90%;
+                }
+        </style>
+    </head>
+
+    <div class="all-tables">
+        <table class="table-striped FixedSizedTable" width="100%">
+            <thead>
+                <tr>
+                    <th>
+                        Name
+                    </th>
+                    <th>
+                        Type
+                    </th>
+                    <th>
+                        Nr. of Jumps
+                    </th>
+                    <th>
+                        City
+                    </th>
+                    <th>
+                        Date
+                    </th>
+                    <th>
+
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @item.Name
+                        </td>
+                        <td>
+                            @item.Type.Gender @item.Type.Type @item.Type.Height m
+                        </td>
+                        <td>
+                            @item.Nr_Jumps
+                        </td>
+                        <td>
+                            @item.City
+                        </td>
+                        <td>
+                            @item.Date.ToShortDateString()
+                        </td>
+                        <td>
+                            @Html.ActionLink(">>", "SelectedContest", new { id = item.Id })
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
