--- a/DiveCompMVC/Views/Contest/CreateContest.cshtml
+++ b/DiveCompMVC/Views/Contest/CreateContest.cshtml
@@ -55,6 +55,16 @@
                 <span asp-validation-for="TypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <select class="form-control">
+
+                    <option>Select the Contest Type</option>
+                    <option value="1">National</option>
+                    <option value="2">Local</option>
+                    
+                </select>
+                
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create Contest" class="btn btn-primary" />
             </div>
         </form>
