--- a/DiveCompMVC/Views/Diver/Create.cshtml
+++ b/DiveCompMVC/Views/Diver/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DiveComp.Data.Models.DiverModel
 
-<h3> Add Diver to Contest </h3>
+<h3> Add Diver </h3>
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create" asp-controller="Diver">
